--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Toronto Virtual Tour</title>
-    <link rel="stylesheet" href="../static/css/styles.css" />
+<!--     <link rel="stylesheet" href="../static/css/styles.css" /> -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+
   </head>
   <body>
     <div id="home">
@@ -94,6 +96,8 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.umd.js"></script>
-    <script src="../static/js/main.js"></script>
+<!--     <script src="../static/js/main.js"></script> -->
+    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+
   </body>
 </html>
