--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
       </p>
       <div class="map-area downtown-area" onclick="startTour()">
         <div>
-          <div>🚀 START VIRTUAL TOUR</div>
+          <div>START VIRTUAL TOUR</div>
         </div>
       </div>
       <p class="map-description">
@@ -37,8 +37,8 @@
       <div id="compass">
         <div class="compass-outer">
           <div class="compass-inner" id="compass-inner">
-            <div class="compass-direction north">N</div>
-            <div class="compass-direction south">S</div>
+            <div class="compass-direction north">S</div>
+            <div class="compass-direction south">N</div>            
             <div class="compass-direction east">E</div>
             <div class="compass-direction west">W</div>
             <div class="compass-needle"></div>
